Updated Report Generation End to End Flow